src/styles/views/Game.scss
@import "../theme";

/* The '&' is a shorthand for the containing element,
  so for example a '&.user-list' inside .game will compile to
  .game.user-list

  for more information visit https://sass-lang.com/guide
 */

 .game {
  &.container {
    margin: 1em;
    border-radius: $borderRadius;
    background-color: $background;
    box-shadow: $dropShadow;
    height: 100%;
    width: 100%;
    overflow: hidden;
    @include center;
  }

  &.vertical-container {
    padding: 0;
    flex-direction: column;
    background-color: transparent;
    width: 100%;
    height: 100%;
    overflow: hidden;
    @include center;
  }

  &.horizontal-container {
    padding: 0;
    flex-direction: row;
    background-color: transparent;
    width: 100%;
    height: 100%;
    overflow:hidden;
    @include center;
  }
}
.target-word {
  margin: 0;
  padding: 0;
  &.text {
    font-size: 3em;
    text-align: center;
    display: flex;
  }

  &.word {
    padding: 0.5em;
    border-radius: calc(#{$borderRadius}/4);
    font-size: 2em;
    height: 100%;
  }
}

.player-list {
  &.container {
    margin: 1em;
    border-radius: $borderRadius;
    background-color: $background;
    box-shadow: $dropShadow;
    height: 100%;
    flex-direction: column;
    overflow: hidden;
    @include center;
   }
  &.list {
    list-style: none;
    padding: 0;
  }
  &.player {
    display: flex;
    align-items: center;
  }
}

.player-word {
  &.container {
    margin: 0.5em 0;
    padding: 1px;
    border-radius: $borderRadius;
    display: flex;
    align-items: center;
  }
  &.player-name {
    margin-right: 10px;
    font-size: 1em;
    text-align: left;
    display: flex;
  }
  &.visible-word {
    margin-left: 5px;
    font-size: 1em;
    text-align: left;
    display: flex;
  }
  &.blurred-word {
    font-size: 1.5em;
    text-align: left;
    display: flex;
    color: transparent;
    text-shadow:
            0 0 10px $textColor,
            0 0 8px $textColor;
  }
}

.word-merge-bar {
  &.container {
    border-radius: $borderRadius;
    display: flex;
    flex-direction: row;
    align-items: center;
    background-color: #454545;
    margin: 0.5em;
    box-shadow: $dropShadow;
    overflow: hidden;
  }

  &.symbol {
    font-size: 5em;
    text-align: center;
    display: flex;
  }
}

.word-board {
  &.container {
    padding: 0;
    border-radius: $borderRadius;
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: #101010;
    margin: 0.5em;
    box-shadow: $dropShadow;
    max-height: 400px; 
    overflow: hidden;
  }
}

.word {
  padding: 0.5em;
  border-radius: calc(#{$borderRadius}/2);
  display: flex;
  align-items: center;
  margin: 0.5em;
  box-shadow: $dropShadow;
}

.glow {
  animation: glow 1.5s infinite alternate;
  z-index: 9999999;
}

@keyframes glow {
  0% {
    box-shadow: 0 0 10px 0 rgba($textColor, 0.4);
  }
  50% {
    box-shadow: 0 0 20px 10px rgba($textColor, 1.0);
  }
  100% {
    box-shadow: 0 0 10px 0 rgba($textColor, 0.4);
  }
}

.small-text {
  color: $buttonCol;
  font-size: 12px;
  margin-top: -5px;
  text-align: center;
}

.popup-container {
  min-height: auto;
  width: auto;
  display: flex;
  position: absolute;
  top: 10%;
  left: 10%;
  transform: translate(-50%, -50%);
  background-color: rgb(43, 43, 43);
  padding: 0.1em;
  border-radius: 5px;
  color: rgb(255, 255, 255);
  font-size: 20px;
  text-transform: uppercase;
  z-index: 99000;
 }

.player-icon {
  position: relative;
  left: 12.5%;
  width: 200px;
  max-height: 80px;
  display: flex;
  align-items: center;
  margin-right: 10px;

  img {
    width: 40px;
    height: 40px;
    border-radius: 25%;
    border: 1px solid rgb(26, 26, 26);
    margin-right: 5px;
  }
}

.search-bar {
  margin: 0.5em;
  padding: 0.5em;
}


  .search-input-css{
    border: none;
    border-radius: $borderRadius;
    padding: 5px;
    background: lighten($background, 15);
    color: inherit;
  }

  .word-table {
    padding: 0;
    display: flex;
    flex-wrap: wrap;
    gap: 0.5em;
    max-height: 285px;
    overflow-y: auto;
    overflow-x: hidden;

  }

.spinner-css {
  position: absolute;
  padding: 0.5em;
  margin-left: 20px;
  margin-top: 130px;
  scale: 0.8;
}

